tests/profile/error/property/wrongtype_name.profile
{
  "version": { "major": 1, "minor": 0 },
  "properties": [
    {
      "type": "setPropertyValue",
      "name": 1.0,
      "value": "property_value_1"
    }
  ]
}
